overleaf/base/overleaf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overleaf
spec:
  selector:
    app: overleaf
  ports:
    - port: 80
      targetPort: 80
